[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "coordination-topology"
version = "0.1.0"
description = "Online TE/entropy/IAT/Euler algorithms for multi-agent fleet coordination topology"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/SuperInstance/coordination-topology"
